# sap-aicore-evals-adr

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
evals/runs/: anthropic-claude-4-sonnet.json  gemini-2.5-flash.json  gpt-4.1.json  mistral-large-instruct.json
evals/testdata/: ade-v2-300.json
notebooks/: 01_prepare_ade_dataset.ipynb  02_upload_datasets_into_s3.ipynb  03_configure_aicore_evals.ipynb
