[project]
name = "aicore-evals-adr"
version = "0.1.0"
description = ""
authors = [{ name = "Merbin J Anselm", email = "merbin.j.anselm@sap.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["sap-ai-sdk-core (>=3.0.8,<4.0.0)", "notebook (>=7.4.4,<8.0.0)", "python-dotenv (>=1.1.1,<2.0.0)", "pandas (>=2.3.1,<3.0.0)", "fastparquet (>=2024.11.0,<2025.0.0)", "huggingface-hub (>=0.34.0,<0.35.0)", "boto3 (>=1.39.14,<2.0.0)", "ipywidgets (>=8.1.7,<9.0.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
